spacing on home page for featurettes

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -15,8 +15,6 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://i.imgur.com/yWD4p6U.jpg" class="d-block w-100" alt="Hot Stone Massage">
-    
-
       <div class="container">
         <div class="carousel-caption text-start">
           <h1>Feel Like Your Best Self Again</h1>
@@ -26,7 +24,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://i.imgur.com/TiT4C8Q.jpg" class="d-block w-100" alt="Spa Facial" style="max-height:95.7vh" >
+      <img src="https://i.imgur.com/TiT4C8Q.jpg" class="d-block w-100" alt="Spa Facial" >
 
       <div class="container">
         <div class="carousel-caption">
@@ -37,7 +35,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://parksideresort.com/wp-content/uploads/The-Ultimate-in-Relaxation-The-Best-Spas-to-Visit-on-Your-Pigeon-Forge-Vacation-Featured-1024x538.jpeg" class="d-block w-100" alt="Relaxation" style="max-height:95.7vh">
+      <img src="https://parksideresort.com/wp-content/uploads/The-Ultimate-in-Relaxation-The-Best-Spas-to-Visit-on-Your-Pigeon-Forge-Vacation-Featured-1024x538.jpeg" class="d-block w-100" alt="Relaxation">
       <div class="container">
        
         <div class="carousel-caption text-end">
@@ -59,6 +57,80 @@
 </div>
 
 
+<div class="container marketing">
+
+  <!-- Three columns of text below the carousel -->
+  <div class="row">
+    <div class="col-lg-4">
+      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+
+      <h2 class="fw-normal">Spa Services</h2>
+      <p>Divine Spa offers bespoke treatments using only the highest quality ingredients. Our treatments utilize aromatherapy to refine your beautiful, healthy skin.</p>
+      <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+
+      <h2 class="fw-normal">Heading</h2>
+      <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+      <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+
+      <h2 class="fw-normal">Heading</h2>
+      <p>And lastly this, the third column of representative placeholder content.</p>
+      <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+    </div><!-- /.col-lg-4 -->
+  </div><!-- /.row -->
+
+
+  <!-- START THE FEATURETTES -->
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading fw-normal lh-1">A place for you, designed in pursuit of holistic vitality and self-connection. <br/><span class="text-muted">It’ll blow your mind.</span></h2>
+      <p class="lead">Ideally situated on beautiful Mission Bay, Divine Spa nourishes your mind, body and soul. Rest and recharge between adventures or make a full day of treating yourself right.</p>
+    </div>
+    <div class="col-md-5">
+      <img src="https://cdn-dkjmb.nitrocdn.com/pYBVpEzTkAPKSLRyjCglffuYauljwDny/assets/static/optimized/rev-7c27447/wp-content/uploads/2020/09/massage-horz-1024x768.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#eee"/></svg>
+
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7 order-md-2">
+      <h2 class="featurette-heading fw-normal lh-1">Prepare To Relax. <span class="text-muted">See for yourself.</span></h2>
+      <p class="lead">Prepare for your spa treatment at our luxury resort with the following key details. For you convenience we add an automatic service charge for your therapist to your service.</p>
+    </div>
+    <div class="col-md-5 order-md-1">
+      <img src="https://cdn-dkjmb.nitrocdn.com/pYBVpEzTkAPKSLRyjCglffuYauljwDny/assets/static/optimized/rev-7c27447/wp-content/uploads/2019/11/spa-room-1-horz-1024x768.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#eee"/></svg>
+
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading fw-normal lh-1">Health & Wellness <span class="text-muted">Checkmate.</span></h2>
+      <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+    </div>
+    <div class="col-md-5">
+      <img src="https://cdn-dkjmb.nitrocdn.com/pYBVpEzTkAPKSLRyjCglffuYauljwDny/assets/static/optimized/rev-7c27447/wp-content/uploads/2019/06/spa-2-dd.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#eee"/></svg>
+
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <!-- /END THE FEATURETTES -->
+
+</div><!-- /.container -->
 
 
 
