--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -1,3 +1,7 @@
+*, ::after, ::before{
+    box-sizing: border-box;
+}
+
 
 .appt{
     margin-top: 10vh;
@@ -61,3 +65,14 @@
     white-space: nowrap;
     -webkit-overflow-scrolling: touch;
   }
+
+  hr{
+    margin: 4rem 0;
+  }
+
+  @media(min-width: 992px){
+  .col-lg-4{
+    flex: 0 0 auto;
+    width: 33.33333333%
+  }
+}
