--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -14,7 +14,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://i.imgur.com/yWD4p6U.jpg" class="d-block w-100" alt="Hot Stone Massage">
+      <img src="https://i.imgur.com/yWD4p6U.jpg" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Hot Stone Massage">
       <div class="container">
         <div class="carousel-caption text-start">
           <h1>Feel Like Your Best Self Again</h1>
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://i.imgur.com/TiT4C8Q.jpg" class="d-block w-100" alt="Spa Facial" >
+      <img src="https://i.imgur.com/TiT4C8Q.jpg" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Spa Facial" >
 
       <div class="container">
         <div class="carousel-caption">
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://parksideresort.com/wp-content/uploads/The-Ultimate-in-Relaxation-The-Best-Spas-to-Visit-on-Your-Pigeon-Forge-Vacation-Featured-1024x538.jpeg" class="d-block w-100" alt="Relaxation">
+      <img src="https://parksideresort.com/wp-content/uploads/The-Ultimate-in-Relaxation-The-Best-Spas-to-Visit-on-Your-Pigeon-Forge-Vacation-Featured-1024x538.jpeg" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Relaxation">
       <div class="container">
        
         <div class="carousel-caption text-end">
@@ -91,8 +91,8 @@
 
   <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">A place for you, designed in pursuit of holistic vitality and self-connection. <br/><span class="text-muted">It’ll blow your mind.</span></h2>
-      <p class="lead">Ideally situated on beautiful Mission Bay, Divine Spa nourishes your mind, body and soul. Rest and recharge between adventures or make a full day of treating yourself right.</p>
+      <h2 class="featurette-heading fw-normal lh-1">Designed in pursuit of holistic vitality and self-connection. <br/><span class="text-muted">It’ll blow your mind.</span></h2>
+      <p class="lead">Divine Spa nourishes your mind, body and soul. Rest and recharge between adventures or make a full day of treating yourself right.</p>
     </div>
     <div class="col-md-5">
       <img src="https://cdn-dkjmb.nitrocdn.com/pYBVpEzTkAPKSLRyjCglffuYauljwDny/assets/static/optimized/rev-7c27447/wp-content/uploads/2020/09/massage-horz-1024x768.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#eee"/></svg>
@@ -117,8 +117,8 @@
 
   <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">Health & Wellness <span class="text-muted">Checkmate.</span></h2>
-      <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+      <h2 class="featurette-heading fw-normal lh-1">Health & Wellness.<br/><span class="text-muted">Find your relaxation.</span></h2>
+      <p class="lead">Relax, refresh and enjoy therapeutic treatments that calm the body, inspire your soul and revive your senses. Divine Spa offers innovative services and aromatherapy inspired treatments to focus on beautiful, healthy skin.</p>
     </div>
     <div class="col-md-5">
       <img src="https://cdn-dkjmb.nitrocdn.com/pYBVpEzTkAPKSLRyjCglffuYauljwDny/assets/static/optimized/rev-7c27447/wp-content/uploads/2019/06/spa-2-dd.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#eee"/></svg>
