--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+body{
+    margin: 0;
+    
+}
+
 
 .appt{
     margin-top: 10vh;
@@ -23,11 +28,7 @@
     user-select: none;
   }
 
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-  }
+  
 
   .b-example-divider {
     height: 3rem;
@@ -75,4 +76,26 @@
     flex: 0 0 auto;
     width: 33.33333333%
   }
+}
+
+@media (min-width:62em){
+    .featurette-heading{
+        margin-top: 5rem;
+    }
+}
+
+@media (min-width:40em){
+    .featurette-heading{
+        font-size: 40px;
+    }
+}
+
+
+.featurette-heading{
+    letter-spacing: -.05rem;
+
+}
+
+.featurette-heading .fw-normal{
+    font-weight: 400!important;
 }
