--- a/main_app/templates/appointment.html
+++ b/main_app/templates/appointment.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block content %}
-{% block title %} Book Appointment{% endblock %}
 
+{% block title %} Book Appointments{% endblock %}
+{% block content %}
 <h1>Make an Appointment</h1>
 
 <div class="apptdiv">
