--- a/main_app/templates/confirmation.html
+++ b/main_app/templates/confirmation.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}{% block content %}
+{% extends 'base.html' %}
 {% block title %} Confirmation{% endblock %}
-
+{% block content %}
 <div class="appt">
 <h1>Appointment Received</h1>
 {% for appointment in appointments %}
