--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,8 +1,8 @@
 
 {% extends 'base.html' %}
-{% block content %}
-{% block title %} Home{% endblock %}
 
+{% block title %} Home{% endblock %}
+{% block content %}
 
 
 
@@ -29,7 +29,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>Another example headline.</h1>
-          <p>Some representative placeholder content for the second slide of the carousel.</p>
+          <p>The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
           <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
         </div>
       </div>
