--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -17,7 +17,7 @@ body{
 
 
 .bd-placeholder-img {
-    font-size: 1.125rem;
+    font-size: 1.rem;
     text-anchor: middle;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -103,4 +103,19 @@ body{
 
 .carousel {
     margin-bottom: 4rem;
+}
+
+p{
+    margin-top: 0;
+}
+
+@media (max-width: 480px) {
+
+
+    p.carousel-p{
+        display: none;
+    }
+    p.carousel-btn{
+        display:none;
+    }
 }
