--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -17,9 +17,9 @@
       <img src="https://i.imgur.com/yWD4p6U.jpg" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Hot Stone Massage">
       <div class="container">
         <div class="carousel-caption text-start">
-          <h1>Feel Like Your Best Self Again</h1>
-          <p>The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+          <h1>Welcome to Divine Spa</h1>
+          <p class="carousel-p">The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
+          <p class="carousel-btn"><a class="btn btn-lg btn-secondary " href="#">Sign up today</a></p>
         </div>
       </div>
     </div>
@@ -28,9 +28,9 @@
 
       <div class="container">
         <div class="carousel-caption">
-          <h1>Another example headline.</h1>
-          <p>The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+          <h1>Feel Like Your Best Self Again</h1>
+          <p class="carousel-p">The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
+          <p class="carousel-btn"><a class="btn btn-lg btn-secondary" href="#">Learn more</a></p>
         </div>
       </div>
     </div>
@@ -40,8 +40,8 @@
        
         <div class="carousel-caption text-end">
           <h1>One more for good measure.</h1>
-          <p>Some representative placeholder content for the third slide of this carousel.</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+          <p class="carousel-p">Some representative placeholder content for the third slide of this carousel.</p>
+          <p class="carousel-btn"><a class="btn btn-lg btn-secondary" href="#">Browse gallery</a></p>
         </div>
       </div>
     </div>
