--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -19,7 +19,7 @@
         <div class="carousel-caption text-start">
           <h1>Welcome to Divine Spa</h1>
           <p class="carousel-p">The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
-          <p class="carousel-btn"><a class="btn btn-lg btn-secondary " href="#">Sign up today</a></p>
+          <p class="carousel-btn"><a class="btn btn-lg btn-secondary " href="/book_appointment">Book today</a></p>
         </div>
       </div>
     </div>
