--- a/main_app/templates/submit_contact.html
+++ b/main_app/templates/submit_contact.html
@@ -1,5 +1,7 @@
-{% extends 'base.html' %}{% block content %}
+{% extends 'base.html' %}
 {% block title %} Confirmation{% endblock %}
+{% block content %}
+
 
 <h1>Thank You!</h1>
 <h3>We will contact you soon.</h3>
