--- a/main_app/templates/contact.html
+++ b/main_app/templates/contact.html
@@ -4,60 +4,59 @@
 {% block content %}
 
 
-<title>Contact Form #2</title>
-</head>
-<body>
 <div class="content">
-<div class="container">
-<div class="row">
-<div class="col-md-5 mr-auto">
-<h2>Contact Us</h2>
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste quaerat autem corrupti asperiores accusantium et fuga! Facere excepturi, quo eos, nobis doloremque dolor labore expedita illum iusto, aut repellat fuga!</p>
-<ul class="list-unstyled pl-md-5 mb-5">
-<li class="d-flex text-black mb-2">
-<span class="mr-3"><span class="icon-map"></span></span> 34 Street Name, City Name Here, <br> United States
-</li>
-<li class="d-flex text-black mb-2"><span class="mr-3"><span class="icon-phone"></span></span> +1 (222) 345 6789</li>
-<li class="d-flex text-black"><span class="mr-3"><span class="icon-envelope-o"></span></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="a9c0c7cfc6e9c4d0decccbdac0ddcc87cac6c4">[email&#160;protected]</a> </li>
-</ul>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 mr-auto">
+                
+                <h2>Questions? Let’s chat.</h2>
+                <br>
+                <p class="mb-5">Hearing from you is important to us, don’t hesitate to call us with questions, or send us any feedback you have. Talk soon!</p>
+                <ul class="list-unstyled pl-md-5 mb-5">
+                <li class="d-flex text-black mb-2">
+                <span class="mr-3"><span class="icon-map"></span></span> 123 General Assembly Way<br>Coding, CA <br> United States
+                </li>
+                <li class="d-flex text-black mb-2"><span class="mr-3"><span class="icon-phone"></span></span> +1 (555) Massage</li>
+                </ul>
+            </div>
+            <div class="col-md-6">
+            <form action="{% url 'contact_create' %}" class="mb-5" method="post" id="contactForm" name="contactForm">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-md-12 form-group">
+                        <label for="name" class="col-form-label">Name</label>
+                        <input type="text" class="form-control" name="name" id="name">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 form-group">
+                        <label for="email" class="col-form-label">Email</label>
+                        <input type="text" class="form-control" name="email" id="email">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 form-group">
+                        <label for="subject" class="col-form-label">Subject</label>
+                        <input type="text" class="form-control" name="subject" id="subject">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 form-group">
+                        <label for="message" class="col-form-label">Message</label>
+                        <textarea class="form-control" name="message" id="message" cols="30" rows="5"></textarea>
+                    </div>
+                </div>
+                <br/>
+                <div class="row">
+                    <div class="col-md-12">
+                        <input type="submit" value="Send Message" class="btn btn-primary rounded-0 py-2 px-4">
+                        <span class="submitting"></span>
+                    </div>
+                </div>
+            </form>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="col-md-6">
-<form action="{% url 'contact_create' %}" class="mb-5" method="post" id="contactForm" name="contactForm">
-    {% csrf_token %}
-<div class="row">
-<div class="col-md-12 form-group">
-<label for="name" class="col-form-label">Name</label>
-<input type="text" class="form-control" name="name" id="name">
-</div>
-</div>
-<div class="row">
-<div class="col-md-12 form-group">
-<label for="email" class="col-form-label">Email</label>
-<input type="text" class="form-control" name="email" id="email">
-</div>
-</div>
-<div class="row">
-<div class="col-md-12 form-group">
-<label for="subject" class="col-form-label">Subject</label>
-<input type="text" class="form-control" name="subject" id="subject">
-</div>
-</div>
-<div class="row">
-<div class="col-md-12 form-group">
-<label for="message" class="col-form-label">Message</label>
-<textarea class="form-control" name="message" id="message" cols="30" rows="5"></textarea>
-</div>
-</div>
-<br/>
-<div class="row">
-<div class="col-md-12">
-<input type="submit" value="Send Message" class="btn btn-primary rounded-0 py-2 px-4">
-<span class="submitting"></span>
-</div>
-</div>
-</form>
-
-</div>
-
 
 {% endblock %}
