--- a/main_app/templates/review_create.html
+++ b/main_app/templates/review_create.html
@@ -1,18 +1,50 @@
 {% extends 'base.html' %} 
-
+{% load widget_tweaks %}
 {% block title %} Reviews{% endblock %}
 {% block content %}
 
 
 <h1>Add Review</h1>
+<form class="justify-content-center" method="post" novalidate>
+  {% csrf_token %}
 
+  {% for hidden_field in form.hidden_fields %}
+    {{ hidden_field }}
+  {% endfor %}
 
-<table>
-<form method="post">
-  {% csrf_token %} 
-  {{form.as_table}}
-</table>
-  <button class="btn btn-secondary">Submit</button>
+  {% if form.non_field_errors %}
+    <div class="alert alert-danger" role="alert">
+      {% for error in form.non_field_errors %}
+        {{ error }}
+      {% endfor %}
+    </div>
+  {% endif %}
+
+  {% for field in form.visible_fields %}
+    <div class="form-group">
+      {{ field.label_tag }}
+
+      {% if form.is_bound %}
+        {% if field.errors %}
+          {% render_field field class="form-control is-invalid" %}
+          {% for error in field.errors %}
+            <div class="invalid-feedback">
+              {{ error }}
+            </div>
+          {% endfor %}
+        {% else %}
+          {% render_field field class="form-control is-valid" %}
+        {% endif %}
+      {% else %}
+        {% render_field field class="form-control" %}
+      {% endif %}
+
+      {% if field.help_text %}
+        <small class="form-text text-muted">{{ field.help_text }}</small>
+      {% endif %}
+    </div>
+  {% endfor %}
+<br>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-
 {% endblock %}
