--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -6,6 +6,7 @@ body{
     margin: 0;
     color: #5a5a5a;
     margin-top: 3.5rem;
+    margin-bottom: 3.5rem;
 }
 
 .navbar{
@@ -86,6 +87,9 @@ body{
     .featurette-heading{
         font-size: 40px;
     }
+    .service-card{
+        width: 10rem
+    }
 }
 
 
@@ -114,14 +118,22 @@ p{
 @media (max-width: 480px) {
 
 
-    /* p.carousel-p{
-        display: none;
-    } */
     p.carousel-btn{
         display:none;
     }
+    .service-card{
+        width: 10rem
+    }
 }
 
-form{
+form.review-form{
     width: 50vw;
+}
+
+.service-page{
+    margin-top: 6rem;
+}
+
+.service-img{
+    width:22rem
 }
