--- a/main_app/templates/review_create.html
+++ b/main_app/templates/review_create.html
@@ -5,7 +5,7 @@
 
 
 <h1>Add Review</h1>
-<form class="justify-content-center" method="post" novalidate>
+<form class="justify-content-center review-form" method="post" novalidate>
   {% csrf_token %}
 
   {% for hidden_field in form.hidden_fields %}
