--- a/main_app/templates/confirmation.html
+++ b/main_app/templates/confirmation.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-
+<br>
 <div class="appt">
 <h1>Appointment Received</h1>
 {% for appointment in appointments %}
@@ -12,12 +12,13 @@
 <h6>Confirmation number # 321613{{appointment.pk}}</h6>
 <br/>
 <h3>Thank you, {{appointment.fname}} !</h3>
+<br>
 <p>Your <b>{{appointment.service}}</b> session is scheduled on <b>{{appointment.date}}</b> at <b>{{appointment.time}}</b>. Please arrive 15 minutes before your appointment. If you need to reschedule, please call us at (555)-MASSAGE. See you soon!</p>
 
 {% endif %}
 {% endfor %}
 
-
-<a href="/">continue browsing</a>
+<br>
+<a class="btn btn-secondary" href="/">Continue Browsing</a>
 </div>
 {% endblock %}
