--- a/main_app/templates/review_create.html
+++ b/main_app/templates/review_create.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %} 
 {% load widget_tweaks %}
-{% block title %} Reviews{% endblock %}
+{% block title %} Leave a Review{% endblock %}
 {% block content %}
 
-
-<h1>Add Review</h1>
+<br>
+<h1 class ="text-center">Leave a Review</h1>
+<br>
+<div class="d-flex justify-content-center">
 <form class="justify-content-center review-form" method="post" novalidate>
   {% csrf_token %}
 
@@ -47,4 +49,5 @@
 <br>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</div>
 {% endblock %}
