--- a/main_app/templates/reviews.html
+++ b/main_app/templates/reviews.html
@@ -1,29 +1,53 @@
 {% extends 'base.html' %}
+{% block title %} Reviews{% endblock %}
+
 {% block content %}
-<br>
-<h1>Reviews</h1>
-<br>
-<a class="button is-dark" href="{% url 'review_create' %}">
-<button type="button" class="btn btn-primary">Add Review</button></a>
-<br>
-<br>
+
 <div>
-    {% for review in reviews %}
 
-    <div class="card"style="width:50vw">
-        <div class="card-header" >
-            Rating: {{review.rating}}
-        </div>
-        <div class="card-body">
-          <blockquote class="blockquote mb-0">
-            <p>"{{review.comment}}"</p>
-            <footer class="blockquote-footer">{{review.name}};  <cite title="Source Title">Service: {{review.service}}</cite></footer>
-          </blockquote>
-        </div>
-    </div>  
 
 <br>
+
+
+
+    <div class="content">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-5 mr-auto">
+                  
+                  <h2>Our Reviews</h2>
+                  <br>
+                  <h5 class="mb-5">See what people are saying about us!</h5>
+                  <p class="mb-5">How was your experience? Leave a review here.
+
+                  </p>
+                  
+              </div>
+              <div class="col-md-6">
+                {% for review in reviews %}
+
+                <div class="card"style="width:50vw">
+                    <div class="card-header" >
+                        Rating: {{review.rating}}
+                    </div>
+                    <div class="card-body">
+                      <blockquote class="blockquote mb-0">
+                        <p>"{{review.comment}}"</p>
+                        <footer class="blockquote-footer">{{review.name}};  <cite title="Source Title">Service: {{review.service}}</cite></footer>
+                      </blockquote>
+                    </div>
+                </div>  
     {% endfor %}
+
+              </div>
+          </div>
+      </div>
+  </div>
+  
+
+
+
+
 
 </div>
 {% endblock %}
