review page finished

--- a/main_app/templates/reviews.html
+++ b/main_app/templates/reviews.html
@@ -3,12 +3,8 @@
 
 {% block content %}
 
-<div>
-
-
 <br>
-
-
+<br>
 
     <div class="content">
       <div class="container">
@@ -18,7 +14,7 @@
                   <h2>Our Reviews</h2>
                   <br>
                   <h5 class="mb-5">See what people are saying about us!</h5>
-                  <p class="mb-5">How was your experience? Leave a review here.
+                  <p class="mb-5">How was your experience? Leave a review <a href="/reviews/new" class="text-decoration-none fst-italic fw-bold">here</a>.
 
                   </p>
                   
@@ -37,17 +33,11 @@
                       </blockquote>
                     </div>
                 </div>  
-    {% endfor %}
-
+                 {% endfor %} 
               </div>
+             
           </div>
-      </div>
+      </div> 
   </div>
   
-
-
-
-
-
-</div>
 {% endblock %}
