--- a/main_app/templates/services.html
+++ b/main_app/templates/services.html
@@ -4,34 +4,40 @@
 
 {% block content %}
 
-<!--  -->
-
-<main class="service-page">
-  <h1>Services</h1>
-  <p class="fs-5 col-md-8">Quickly and easily get started with Bootstrap's compiled, production-ready files with this barebones example featuring some basic HTML and helpful links. Download all our examples to get started.</p>
-
-
-  <hr class="col-3 col-md-2 mb-5">
-
- 
-</main>
-<div class="d-flex justify-content-center">
+<div class="container">
+  
 
 
 
-<div class="card mb-3 service-img">
-  <img src="https://www.bellamentesalonandspa.com/wp-content/uploads/2016/08/massage-banner.jpg" class="card-img-top " alt="..." >
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+<h1>Services</h1>
+
+    {% for service in services %}
+
+
+
+
+    <div class="row g-0 bg-light position-relative">
+      <div class="col-md-6 mb-md-0 p-md-4">
+          <h5 class="fs-2 mt-0">{{service.name}}</h5>
+          <p>{{service.description}}</p>
+          <p class="text-end fw-semibold">{{detail.price}}</p>
+          <a href="{% url 'service_detail' service.pk %}"class="btn btn-primary">Details</a>
+
+      </div>
+      <div class="col-md-6 p-4 ps-md-0">
+          <img src="{{service.img}}" class="w-100" alt="{{service.name}}">
+      </div>
+      
   </div>
+  <br>
+    
+
+
+
+
+    {% endfor %}
 </div>
-
-
 </div>
-
-
 
 {% endblock %}
 
