--- a/main_app/templates/appointment.html
+++ b/main_app/templates/appointment.html
@@ -2,9 +2,10 @@
 
 {% block title %} Book Appointments{% endblock %}
 {% block content %}
-<h1>Make an Appointment</h1>
+<br>
+<h1>Appointments</h1>
 
-
+<p class="fs-3">Ready to book? Fill out the form below!</p>
 
 <div class="container mt-5">
     <div class="row">
