--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -24,8 +24,17 @@
 <body>
     <nav class="navbar bg-light fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Divine Spa</a>
+          
+              <ul class="nav nav-pills">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Book Today</a>
+                </li>
+                </ul>
+            
+          <a class="navbar-brand " href="/">Divine Spa</a>
+          
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+            
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
