--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -29,8 +29,8 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>Feel Like Your Best Self Again</h1>
-          <p class="carousel-p">The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
-          <p class="carousel-btn"><a class="btn btn-lg btn-secondary" href="#">Learn more</a></p>
+          <p class="carousel-p">Divine Spa offers bespoke treatments using only the highest quality ingredients. Our treatments utilize aromatherapy to refine your beautiful, healthy skin.</p>
+          <p class="carousel-btn"><a class="btn btn-lg btn-secondary" href="/services">Services</a></p>
         </div>
       </div>
     </div>
@@ -39,7 +39,7 @@
       <div class="container">
        
         <div class="carousel-caption text-end">
-          <h1>One more for good measure.</h1>
+          <h1>Prepare to Relax</h1>
           <p class="carousel-p">Some representative placeholder content for the third slide of this carousel.</p>
           <p class="carousel-btn"><a class="btn btn-lg btn-secondary" href="#">Browse gallery</a></p>
         </div>
@@ -105,7 +105,7 @@
   <div class="row featurette">
     <div class="col-md-7 order-md-2">
       <h2 class="featurette-heading fw-normal lh-1">Prepare To Relax. <span class="text-muted">See for yourself.</span></h2>
-      <p class="lead">Prepare for your spa treatment at our luxury resort with the following key details. For you convenience we add an automatic service charge for your therapist to your service.</p>
+      <p class="lead">Prepare for your spa treatment at our luxury resort. For you convenience we add an automatic service charge for your therapist to your service.</p>
     </div>
     <div class="col-md-5 order-md-1">
       <img src="https://cdn-dkjmb.nitrocdn.com/pYBVpEzTkAPKSLRyjCglffuYauljwDny/assets/static/optimized/rev-7c27447/wp-content/uploads/2019/11/spa-room-1-horz-1024x768.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#eee"/></svg>
