finished home page formatting

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -30,7 +30,7 @@
         <div class="carousel-caption">
           <h1>Feel Like Your Best Self Again</h1>
           <p class="carousel-p">Divine Spa offers bespoke treatments using only the highest quality ingredients. Our treatments utilize aromatherapy to refine your beautiful, healthy skin.</p>
-          <p class="carousel-btn"><a class="btn btn-lg btn-secondary" href="/services">Services</a></p>
+          <p class="carousel-btn"><a class="btn btn-lg btn-secondary" href="/services">Our Services</a></p>
         </div>
       </div>
     </div>
@@ -40,8 +40,8 @@
        
         <div class="carousel-caption text-end">
           <h1>Prepare to Relax</h1>
-          <p class="carousel-p">Some representative placeholder content for the third slide of this carousel.</p>
-          <p class="carousel-btn"><a class="btn btn-lg btn-secondary" href="#">Browse gallery</a></p>
+          <p class="carousel-p">Treat yourself to something amazing.</p>
+          <p class="carousel-btn"><a class="btn btn-lg btn-secondary" href="/services">Browse gallery</a></p>
         </div>
       </div>
     </div>
@@ -62,25 +62,25 @@
   <!-- Three columns of text below the carousel -->
   <div class="row">
     <div class="col-lg-4">
-      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+      <img src="https://images.unsplash.com/photo-1544161515-4ab6ce6db874?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8c3BhfGVufDB8fDB8fA%3D%3D&w=1000&q=80" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></svg>
 
       <h2 class="fw-normal">Spa Services</h2>
       <p>Divine Spa offers bespoke treatments using only the highest quality ingredients. Our treatments utilize aromatherapy to refine your beautiful, healthy skin.</p>
-      <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+      <p><a class="btn btn-secondary" href="/services">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
-      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+      <img src="https://allnaturaldayspa.net/wp-content/uploads/2018/04/woman-enjoying-spa-treatment-with-honey_b7yt69.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></svg>
 
-      <h2 class="fw-normal">Heading</h2>
-      <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-      <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+      <h2 class="fw-normal">Relax</h2>
+      <p> Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings and feel like yourself again.</p>
+      <p><a class="btn btn-secondary" href="#">Appointments &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
-      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+      <img src ="https://media.istockphoto.com/photos/still-life-closeup-of-a-tranquil-spa-arrangement-picture-id1325095289?b=1&k=20&m=1325095289&s=170667a&w=0&h=WN2MnFRkjm-Sb3Pqu6jeQj8wR2sNu3qCGi6TFptwOPA=" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></svg>
 
-      <h2 class="fw-normal">Heading</h2>
-      <p>And lastly this, the third column of representative placeholder content.</p>
-      <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+      <h2 class="fw-normal">Reviews</h2>
+      <p>Still iffy? See what others say about us. Get to know what we offer through their experiences before you book, you won't be disappointed in your visit. </p>
+      <p><a class="btn btn-secondary" href="/reviews">Visit &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
 
