--- a/main_app/templates/submit_contact.html
+++ b/main_app/templates/submit_contact.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
-{% block title %} Confirmation{% endblock %}
+{% block title %} Message Sent{% endblock %}
 {% block content %}
 
-
-<h1>Thank You!</h1>
+<br>
+<br>
+<br>
+<br>
+<h1>Thank you!</h1>
 <h3>We will contact you soon.</h3>
+<br>
+<a class="btn btn-secondary" href="/">Continue Browsing</a>
+
 
 {% endblock %}
