--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,21 +22,20 @@
     <title>Divine Spa - {% block title %}{% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar bg-light fixed-top">
+    <nav class="navbar fixed-top" style="background-color:#5a5a5a; color:white">
         <div class="container-fluid">
           
-              
-            
-          <a class="navbar-brand " href="/">Divine Spa</a>
+          <a class="nav-link active" aria-current="page" href="/book_appointment">Book Today</a>
+          <a class="navbar-brand justify-content-center" style="color: white" href="/">Divine Spa</a>
           
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+          <button class="navbar-toggler" style="color:white" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon" ></span>
           </button>
           <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Divine Spa</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              <button type="button" class="btn-close"  data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
