--- a/main_app/templates/reviews.html
+++ b/main_app/templates/reviews.html
@@ -16,7 +16,7 @@
                   <h2>Our Reviews</h2>
                   <br>
                   <h5 class="mb-5">See what people are saying about us!</h5>
-                  <p class="mb-5">How was your experience? Leave a review <a href="/reviews/new" class="text-decoration-none fst-italic fw-bold">here</a>.
+                  <p class="mb-5">How was your experience? Leave a review <a href="/reviews/new" class="text-decoration-none fst-italic fw-bold">here</a>!
 
                   </p>
                   
