--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -73,7 +73,7 @@
 
       <h2 class="fw-normal">Relax</h2>
       <p> Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings and feel like yourself again.</p>
-      <p><a class="btn btn-secondary" href="#">Appointments &raquo;</a></p>
+      <p><a class="btn btn-secondary" href="/Book_appointment">Appointments &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <img src ="https://media.istockphoto.com/photos/still-life-closeup-of-a-tranquil-spa-arrangement-picture-id1325095289?b=1&k=20&m=1325095289&s=170667a&w=0&h=WN2MnFRkjm-Sb3Pqu6jeQj8wR2sNu3qCGi6TFptwOPA=" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></svg>
