--- a/main_app/templates/review_create.html
+++ b/main_app/templates/review_create.html
@@ -6,49 +6,17 @@
 <br>
 <br>
 <br>
-<h1 class ="text-center">Leave a Review</h1>
+<h1 class ="justify-content-center">Leave a Review</h1>
 <br>
-<div class="d-flex justify-content-center">
-<form class="justify-content-center review-form" method="post" novalidate>
-  {% csrf_token %}
 
-  {% for hidden_field in form.hidden_fields %}
-    {{ hidden_field }}
-  {% endfor %}
 
-  {% if form.non_field_errors %}
-    <div class="alert alert-danger" role="alert">
-      {% for error in form.non_field_errors %}
-        {{ error }}
-      {% endfor %}
-    </div>
-  {% endif %}
+<form method="post">
+<!-- Security Feature  -->
+  {% csrf_token %} 
+<!--  Generate inputs  -->
+  {{form.as_p}} 
+<!--  Submit form  -->
 
-  {% for field in form.visible_fields %}
-    <div class="form-group">
-      {{ field.label_tag }}
-
-      {% if form.is_bound %}
-        {% if field.errors %}
-          {% render_field field class="form-control is-invalid" %}
-          {% for error in field.errors %}
-            <div class="invalid-feedback">
-              {{ error }}
-            </div>
-          {% endfor %}
-        {% else %}
-          {% render_field field class="form-control is-valid" %}
-        {% endif %}
-      {% else %}
-        {% render_field field class="form-control" %}
-      {% endif %}
-
-      {% if field.help_text %}
-        <small class="form-text text-muted">{{ field.help_text }}</small>
-      {% endif %}
-    </div>
-  {% endfor %}
-<br>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 </div>
