added to contact page

--- a/main_app/templates/contact.html
+++ b/main_app/templates/contact.html
@@ -19,6 +19,9 @@
                 <li class="d-flex text-black mb-2">
                 <span class="mr-3"><span class="icon-map"></span></span> 123 General Assembly Way<br>Coding, CA <br> United States
                 </li>
+                <li class="d-flex text-black mb-2">
+                <span class="mr-3"><span class="icon-map"></span></span> Hours: 9:00am - 5:00pm<br>Tuesday - Sunday; <br> Closed Monday
+                </li>
                 <li class="d-flex text-black mb-2"><span class="mr-3"><span class="icon-phone"></span></span> +1 (555) Massage</li>
                 </ul>
             </div>
