edited for mobile

--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -122,9 +122,10 @@ p{
     p.carousel-btn{
         display:none;
     }
-    .service-card{
-        width: 10rem
+    p.carousel-p{
+       display: none;
     }
+    
 }
 
 
