--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -6,6 +6,10 @@
 
 
 
+
+<br>
+<br>
+<br>
 <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -16,8 +20,8 @@
     <div class="carousel-item active">
       <img src="https://i.imgur.com/yWD4p6U.jpg" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Hot Stone Massage">
       <div class="container">
-        <div class="carousel-caption text-start">
-          <h1>Welcome to Divine Spa</h1>
+        <div class="carousel-caption text-start ">
+          <h1 carousel-c>Welcome to Divine Spa</h1>
           <p class="carousel-p">The demands of daily life can be super taxing on your body, so it pays to take care of it. Divine Spa will help keep your body running smoothly, so you can run that half marathon or that full day of meetings.</p>
           <p class="carousel-btn"><a class="btn btn-lg btn-secondary " href="/book_appointment">Book today</a></p>
         </div>
