--- a/main_app/templates/appointment.html
+++ b/main_app/templates/appointment.html
@@ -66,7 +66,7 @@
                             <option value="Pink Himalayan Salt Stone Massage">Pink Himalayan Salt Stone Massage</option>
                             <option value="Prenatal Massage">Prenatal Massage</option>
                             <option value="Reflexology">Reflexology</option>
-                            <option value="Deep Tissue assage">Deep Tissue Massage</option>
+                            <option value="Deep Tissue Massage">Deep Tissue Massage</option>
                         </select>
                     </div>
                    
