--- a/main_app/templates/appointment.html
+++ b/main_app/templates/appointment.html
@@ -27,7 +27,7 @@
                         <input type="text" class="form-control" placeholder="Last Name" name="lname" required>
                     </div>
                     <div class="col-md-6">
-                        <input type="tel" class="form-control" placeholder="Phone Number" name="number" required>
+                        <input type="text" class="form-control" placeholder="Phone Number" name="number" required>
                     </div>
                     <div class="col-md-6">
                         <input type="email" class="form-control" placeholder="Enter Email" name="email" required>
